syntax = "proto3";

package com.wdullaer.whoami.v1;

option go_package = "pb";

service WhoamiService {
    rpc GetData(GetDataRequest) returns (GetDataResponse);
    rpc Bench(BenchRequest) returns (BenchResponse);
    rpc GetWhoami(GetWhoamiRequest) returns (GetWhoamiResponse);
    rpc GetHealth(GetHealthRequest) returns (GetHealthResponse);
    rpc SetHealth(SetHealthRequest) returns (SetHealthResponse);
}

message GetDataRequest {
    int64 size = 1;
}

message GetDataResponse {
    string content = 1;
}

message BenchRequest {}

message BenchResponse {
    int32 result = 1;
}

message GetWhoamiRequest {}

message GetWhoamiResponse {
    string hostname = 1;
    repeated string ip = 2;
    map<string,string> header = 3;
    string url = 4;
    string host = 5;
    string rpc = 6;
}

message GetHealthRequest {}

message GetHealthResponse {
    bool ok = 1;
}

message SetHealthRequest {
    Status status = 1;

}

enum Status {
    OK = 0;
    CANCELLED = 1;
    UNKNOWN = 2;
    INVALID_ARGUMENT = 3;
    DEADLINE_EXCEEDED = 4;
    NOT_FOUND = 5;
    ALREADY_EXISTS = 6;
    PERMISSION_DENIED = 7;
    RESOURCE_EXHAUSTED = 8;
    FAILED_PRECONDITION = 9;
    ABORTED = 10;
    OUT_OF_RANGE = 11;
    UNIMPLEMENTED = 12;
    INTERNAL = 13;
    UNAVAILABLE = 14;
    DATA_LOSS = 15;
    UNAUTHENTICATED = 16;
}

message SetHealthResponse {}